--- a/views/index.pug
+++ b/views/index.pug
@@ -4,5 +4,5 @@ block content
   h1= title
   p Welcome to #{title}
   form(action="/", method="POST")
-    input(type="email", placeholder="Email")
+    input(name="lead_email", type="email", placeholder="Email")
     button(type="submit") Submit
