--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,7 @@ block content
   form(action="/", method="POST")
     input(name="lead_email", type="email", placeholder="Email")
     button(type="submit") Submit
+  a(href="/leads") Show leads
   if leads
     h1 Leads
     for lead in leads
